Fix body overflow for menu mobile

--- a/_scss/global.scss
+++ b/_scss/global.scss
@@ -11,7 +11,7 @@ body {
   font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
   font-size: 1.60rem;
 
-  .mobile-overflow {
+  &.mobile-overflow {
     overflow: hidden;
 
     @media(min-width: $medium-screen) {
